Fix #23 Update to latest MFO.Contracts package version
